--- a/majet/backend/package.json
+++ b/majet/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.15.1",
     "@prisma/config": "^7.2.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
